# CAT

./: .environment.yaml  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.md  NOTICE  README.rst  codecov.yaml  conftest.py  environment.yaml  properties_dataframe.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yaml  pythonpackage.yml
CAT/: CAT.py  README.rst  __init__.py  __version__.py  _mol_str_parser.py  _setattr.py  addlig.py  assertion_functions.py  base.py  distribution.py  frozen_settings.py  gen_job_manager.py  jobs.py  logger.py  misc.py  mol_utils.py  multi_ligand.py  qd_functions.py  recipes.py  sanitize_input.py  settings_dataframe.py  test_utils.py  thermo_chem.py  timeit_test.py  utils.py  workflow.py
docs/: 0_documentation.rst  10_context_managers.rst  11_md_asa.rst  12_10_recipes.rst  12_11_recipes.rst  12_1_recipes.rst  12_2_recipes.rst  12_3_recipes.rst  12_4_recipes.rst  12_5_recipes.rst  12_6_recipes.rst  12_7_recipes.rst  12_8_recipes.rst  12_9_recipes.rst  12_recipes.rst  13_multi_ligand.rst  14_pdb_container.rst  15_dtype.rst  16_hdf5_logging.rst  17_property_dset.rst  18_distribution.rst  1_get_started.rst  2_path.rst  3_input_core_ligand.rst  4_optional.rst  5_bde.rst  6_type_aliases.rst  7_database.rst  8_import_qd.rst  8_psf.rst  9_prm.rst  9_psf.rst  Makefile  _1_identify_surface.rst  _2_distribution_brute.rst  _3_distribution.rst  _4_guess_core_core_dist.rst  args.rst  conf.py  core_ligand.rst  (+5 more)
examples/: README.rst  addlig.py  example_xyz.py  input.py  input.yaml  input.yml  input_settings.yaml  input_settings_ff.yaml  input_settings_ff2.yaml  input_settings_qd.yaml
test/: __init__.py  test_cat.py  test_frozen_settings.py  test_import.py  test_lint.py  test_mol_utils.py  test_schemas.py  test_settings_dataframe.py  test_thermo_chem.py  test_utils.py  tests_import.py
tests/: conftest.py  test_CAT.py  test_distribution.py  test_distribution_brute.py  test_edge_dist.py  test_entry_points.py  test_frozen_settings.py  test_gen_job_manager.py  test_indices.py  test_ligand_anchoring.py  test_ligand_attach.py  test_ligand_opt.py  test_lint.py  test_logger.py  test_mol_import.py  test_mol_str_parser.py  test_mol_to_file.py  test_mol_utils.py  test_multi_ligand.py  test_perp_surface.py  test_schemas.py  test_setattr.py  test_settings_dataframe.py  test_sphinx.py  test_thermo_chem.py  test_thread_safe.py  test_utils.py  test_validate_input.py  test_validate_mol.py
(+171 files in other folders)
