[metadata]
description_file = README.rst
license_file = LICENSE.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = CAT

[flake8]
max-line-length = 100
per-file-ignores =
    CAT/test_utils.py: E501

[tool:pytest]
testpaths = CAT tests
addopts = --tb=short --doctest-glob='*.py' --doctest-glob='*.rst' --cov=CAT --cov-report xml --cov-report term --cov-report html --doctest-modules
markers = slow: A marker for slow tests.
filterwarnings =
    ignore:Conversion of the second argument of issubdtype from `.` to `.` is deprecated:FutureWarning:h5py.*
    ignore:invalid escape sequence:DeprecationWarning:h5py.*
    ignore:numpy\.dtype size changed, may indicate binary incompatibility:RuntimeWarning
    ignore:job_recipe \.yaml storage has been discontinued:DeprecationWarning
    ignore::CAT.utils.MoleculeWarning
    ignore::DeprecationWarning:numpy.distutils.*

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pydocstyle]
convention = numpy
add-ignore = D401
ignore-decorators = overload
